--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "3 amigos delivered orders",
+  "name": "3 amigos delivered orders",
   "icons": [
     {
       "src": "favicon.ico",
