--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "3-amigos-admin",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://3-amigos-central-kitchen.github.io/delivered-orders-accdept/",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
